@@ -21,7 +21,7 @@ if ( !defined( 'SRF_VERSION' ) ) {
 
 # The formats you want to be able to use.
 # See the INSTALL file or this url for more info: http://www.mediawiki.org/wiki/Extension:Semantic_Result_Formats#Installation
-$srfgFormats = array( 'icalendar', 'vcard', 'bibtex', 'calendar', 'eventline', 'timeline', 'outline', 'gallery', 'jqplotbar', 'jqplotpie', 'sum', 'average', 'min', 'max', 'tagcloud' );
+$srfgFormats = array( 'icalendar', 'vcard', 'bibtex', 'calendar', 'eventline', 'timeline', 'outline', 'gallery', 'jqplotbar', 'jqplotpie', 'sum', 'product', 'average', 'min', 'max', 'tagcloud' );
 
 # Used for jqplot formats.
 $srfgJQPlotIncluded = false;
